--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,7 @@
 [user]
 	name = Kieran Smith
 	email = kieran.smith@itv.com
+	signingkey = 6928F33FB43397D1
 [core]
 	excludesfile = ~/.dotfiles/.gitignore
 [filter "lfs"]
@@ -12,3 +13,5 @@
 	rebase = true
 [push]
 	default = current
+[commit]
+	gpgsign = true
