Add iterm config

--- a/.envvars
+++ b/.envvars
@@ -3,5 +3,5 @@ export ZSH="/Users/kiersmi1/.oh-my-zsh"
 export ZSH_COMPDUMP=$ZSH/cache/.zcompdump-$HOST
 export EDITOR='nano'
 export GPG_TTY=$(tty)
-# export ARCHFLAGS="-arch x86_64"
+export ARCHFLAGS="-arch x86_64"
 export TFENV_ARCH=amd64
